[package]
name = "wdp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.15", features = ["derive", "env"] }
fantoccini = { version = "0.19.1", features = ["rustls-tls"], default-features = false }
http = "0.2.8"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.2.2"
webdriver = "0.46.0"
